; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_kvm_fw.c_pal_vm_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_kvm_fw.c_pal_vm_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.ia64_pal_retval = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast ({ i64, i32 } (%struct.kvm_vcpu*)* @pal_vm_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal { i64, i32 } @pal_vm_info(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca %struct.ia64_pal_retval, align 4
  %3 = alloca %struct.kvm_vcpu*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca { i64, i32 }, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %3, align 8
  %9 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %10 = call i32 @kvm_get_pal_call_data(%struct.kvm_vcpu* %9, i64* %4, i64* %5, i64* %6, i64* %7)
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = getelementptr inbounds %struct.ia64_pal_retval, %struct.ia64_pal_retval* %2, i32 0, i32 1
  %14 = getelementptr inbounds %struct.ia64_pal_retval, %struct.ia64_pal_retval* %2, i32 0, i32 0
  %15 = call i32 @ia64_pal_vm_info(i64 %11, i64 %12, i32* %13, i32* %14)
  %16 = getelementptr inbounds %struct.ia64_pal_retval, %struct.ia64_pal_retval* %2, i32 0, i32 2
  store i32 %15, i32* %16, align 4
  %17 = bitcast { i64, i32 }* %8 to i8*
  %18 = bitcast %struct.ia64_pal_retval* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %17, i8* align 4 %18, i64 12, i1 false)
  %19 = load { i64, i32 }, { i64, i32 }* %8, align 8
  ret { i64, i32 } %19
}

declare dso_local i32 @kvm_get_pal_call_data(%struct.kvm_vcpu*, i64*, i64*, i64*, i64*) #1

declare dso_local i32 @ia64_pal_vm_info(i64, i64, i32*, i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
